force-app/main/default/objects/tc9_et__Pay_Rate_Loading__c/tc9_et__Pay_Rate_Loading__c.object-meta.xml
<CustomObject>
    <description>A child object to the Rates Calculator that holds individual Pay Rate Loading details to be used in the calculation of Rate Calculator Lines</description>
    <label>Pay Rate Loading(DO NOT USE)</label>
    <nameField>
        <displayFormat>PRL-{0000000000}</displayFormat>
        <label>Pay Rate Loading ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Rate Loadings(DO NOT USE)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>