force-app/main/default/objects/tc9_et__Pay_Rate_Loading__c/fields/tc9_et__Interpretation_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Interpretation_Rule__c</fullName>
    <description>Defines the Interpretation Rule that applies to the Pay Rate Loading</description>
    <inlineHelpText>Defines the Interpretation Rule that applies to the Pay Rate Loading</inlineHelpText>
    <label>Interpretation Rule</label>
    <referenceTo>tc9_et__Interpretation_Rule__c</referenceTo>
    <relationshipLabel>Pay Rate Loadings</relationshipLabel>
    <relationshipName>Pay_Rate_Loadings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>