force-app/main/default/objects/tc9_et__Pay_Rate_Loading__c/fields/tc9_et__Loading_Rate_Based_On__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Loading_Rate_Based_On__c</fullName>
    <description>Defines the Loading Rate that will apply for related Rate Calculators for Casual and Shift Loading</description>
    <inlineHelpText>Defines what the Amount calculated for related Casual and Shift Loadings on Rate Calculators using the Pay Rate Loading record is based on</inlineHelpText>
    <label>Loading Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Pay_Rate_Loading_Based_On</valueSetName>
    </valueSet>
</CustomField>