force-app/main/default/objects/tc9_et__Pay_Rate_Loading__c/fields/tc9_et__Pay_Codes_Applied__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Pay_Codes_Applied__c</fullName>
    <description>Defines the Record IDs of the Pay Codes that the loading rate will apply to</description>
    <inlineHelpText>Defines the Record IDs of the Pay Codes that the loading rate will apply to</inlineHelpText>
    <label>Pay Codes Applied</label>
    <length>189</length>
    <type>Text</type>
</CustomField>