force-app/main/default/objects/tc9_et__Pay_Rate_Loading__c/recordTypes/tc9_et__Casual_Loading.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Casual_Loading</fullName>
    <active>true</active>
    <description>For defining Casual Loading rates</description>
    <label>Casual Loading</label>
</RecordType>