force-app/main/default/objects/tc9_et__Pay_Rate_Loading__c/recordTypes/tc9_et__Shift_Loading.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Shift_Loading</fullName>
    <active>true</active>
    <description>For defining Shift Loading rates</description>
    <label>Shift Loading</label>
</RecordType>